--- a/collated/main/A0130979U.md
+++ b/collated/main/A0130979U.md
@@ -1,4 +1,31 @@
 # A0130979U
+###### \java\seedu\jobs\commons\events\storage\SavePathChangedEvent.java
+``` java
+
+public class SavePathChangedEvent extends BaseEvent {
+
+    private String path;
+    private ReadOnlyTaskBook data;
+
+    public SavePathChangedEvent(String path, ReadOnlyTaskBook data) {
+        this.path = path;
+        this.data = data;
+    }
+
+    public String getPath() {
+        return path;
+    }
+
+    public ReadOnlyTaskBook getData() {
+        return data;
+    }
+
+    public String toString() {
+        return "changing file path to : " + path;
+    }
+
+}
+```
 ###### \java\seedu\jobs\logic\commands\AddCommand.java
 ``` java
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Adds a task to JOBS. "
@@ -71,9 +98,91 @@ public class CompleteCommand extends Command {
 
 }
 ```
-###### \java\seedu\jobs\logic\commands\CompleteCommand.java
+###### \java\seedu\jobs\logic\commands\PathCommand.java
 ``` java
 
+public class PathCommand extends Command {
+
+    public static final String COMMAND_WORD = "path";
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Change save path. "
+            + "Parameters: path [filename] \n"
+            + "Example: " + COMMAND_WORD
+            + " taskbook.xml";
+    private String path;
+    private boolean isValid;
+    public static final String MESSAGE_SUCCESS = "Save path has been successfully updated \n";
+    public static final String MESSAGE_INVALID_FILE_PATH = "This path is invalid";
+
+    public PathCommand(String path) {
+        this.path = path;
+        this.isValid = true;
+        EventsCenter.getInstance().registerHandler(this);
+    }
+
+    @Override
+    public CommandResult execute() throws IOException {
+        assert model != null;
+
+        model.changePath(path);
+        if (!isValid) {
+            throw new IOException(MESSAGE_INVALID_FILE_PATH);
+        }
+        return new CommandResult(String.format(MESSAGE_SUCCESS));
+    }
+
+    @Subscribe
+    public void handleSavePathChangedEventException(SavePathChangedEventException event) {
+        isValid = false;
+    }
+
+}
+```
+###### \java\seedu\jobs\logic\commands\SetCommand.java
+``` java
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": "
+            + "Set email and password to login to the Google Calendar. ";
+
+    public static final String MESSAGE_SUCCESS = "Email and Password has been successfully added \n";
+
+    public static final String MESSAGE_INVALID_EMAIL = "Emails should be 2 alphanumeric"
+            + "/period strings separated by '@'";
+
+    public static final String EMAIL_VALIDATION_REGEX = "[\\w\\.]+@[\\w\\.]+";
+
+    public String email;
+    public String password;
+
+    /**
+     * Creates a set command using raw values.
+     *
+     * @throws IllegalValueException
+     *             if any of the raw values are invalid
+     */
+    public SetCommand(Optional<String> email, Optional<String> password)
+            throws IllegalValueException {
+
+        if (EMAIL_VALIDATION_REGEX.matches(email.get())) {
+            throw new IllegalValueException(MESSAGE_INVALID_EMAIL);
+        }
+        this.email = email.get();
+        this.password = password.get();
+    }
+
+    @Override
+    public CommandResult execute() {
+        assert model != null;
+        model.set(email, password);
+        return new CommandResult(MESSAGE_SUCCESS);
+    }
+}
+```
+###### \java\seedu\jobs\model\ModelManager.java
+``` java
+    @Override
+    public void changePath(String path) throws IOException {
+        raise(new SavePathChangedEvent(path, taskBook));
+    }
 ```
 ###### \java\seedu\jobs\model\task\Description.java
 ``` java
@@ -118,10 +227,6 @@ public class Description {
     }
 
 }
-```
-###### \java\seedu\jobs\model\task\Description.java
-``` java
-
 ```
 ###### \java\seedu\jobs\model\task\Period.java
 ``` java
@@ -174,10 +279,6 @@ public class Period {
 
 }
 ```
-###### \java\seedu\jobs\model\task\Period.java
-``` java
-
-```
 ###### \java\seedu\jobs\model\task\ReadOnlyTask.java
 ``` java
 public interface ReadOnlyTask {
@@ -224,13 +325,10 @@ public interface ReadOnlyTask {
 
 }
 ```
-###### \java\seedu\jobs\model\task\ReadOnlyTask.java
-``` java
-
-```
 ###### \java\seedu\jobs\model\task\Task.java
 ``` java
 import seedu.jobs.model.task.UniqueTaskList.IllegalTimeException;
+
 
 public class Task implements ReadOnlyTask {
 
@@ -258,6 +356,30 @@ public class Task implements ReadOnlyTask {
         this.tags = new UniqueTagList(tags); // protect internal tags from
                                              // changes in the arg list
         this.isCompleted = false;
+
+        if (!startTime.value.equals(Time.DEFAULT_TIME) && !endTime.value.equals(Time.DEFAULT_TIME)
+                && startTime.compareTo(endTime) > 0) {
+            throw new IllegalTimeException(Messages.MESSAGE_INVALID_START_END_TIME);
+        }
+
+    }
+
+    /**
+     * Overloaded constructor with isCompleted parameter
+     * @param period TODO
+     * @throws IllegalTimeException
+     */
+    public Task(Name name, Time startTime, Time endTime, Description description, UniqueTagList tags, Period period,
+            boolean isCompleted) throws IllegalTimeException {
+        assert !CollectionUtil.isAnyNull(name);
+        this.name = name;
+        this.startTime = startTime;
+        this.endTime = endTime;
+        this.period = period;
+        this.description = description;
+        this.tags = new UniqueTagList(tags); // protect internal tags from
+                                             // changes in the arg list
+        this.isCompleted = isCompleted;
 
         if (!startTime.value.equals(Time.DEFAULT_TIME) && !endTime.value.equals(Time.DEFAULT_TIME)
                 && startTime.compareTo(endTime) > 0) {
@@ -345,9 +467,14 @@ public class Task implements ReadOnlyTask {
      * Mark this task as completed
      */
     public void markComplete() {
+        if (!this.startTime.equals(Time.DEFAULT_TIME)) {
+            this.startTime.addDays(period.value);
+        }
+        if (!this.endTime.equals(Time.DEFAULT_TIME)) {
+            this.endTime.addDays(period.value);
+        }
         this.isCompleted = (period.value == 0);
-        this.startTime.addDays(period.value);
-        this.endTime.addDays(period.value);
+
     }
 
     public void resetData(ReadOnlyTask replacement) {
@@ -416,7 +543,7 @@ public class Time implements Comparable<Time> {
                 this.value = DEFAULT_TIME;
             }  else if (!isValidTime(startTime.get())) {
                 throw new IllegalValueException(MESSAGE_TIME_CONSTRAINT);
-            }   else {
+            }  else {
                 this.value = startTime.get();
             }
         }
@@ -426,16 +553,25 @@ public class Time implements Comparable<Time> {
      * Returns true if a given string is in valid time format
      */
     public static boolean isValidTime(String test) {
-        String time = extractTime(test);
-        String date = extractDate(test);
+
         try {
-            LocalDate.parse(date, DateTimeFormatter.ofPattern("dd/MM/uuuu").
-                    withResolverStyle(ResolverStyle.STRICT));
-        } catch (DateTimeParseException e) {
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/uuuu HH:mm");
+            LocalDateTime.parse(test, formatter);
+            LocalDate.parse(extractDate(test), DateTimeFormatter.ofPattern("dd/MM/uuuu").
+                   withResolverStyle(ResolverStyle.STRICT));
+        } catch (DateTimeParseException dtpe) {
             return false;
         }
-        return time.length() > 0;
+        return true;
+    }
 
+    /**
+     * Check if the given time has passed
+     */
+    public boolean isObsolette() {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/uuuu HH:mm");
+        LocalDateTime thisDate = LocalDateTime.parse(this.value, formatter);
+        return thisDate.compareTo(LocalDateTime.now()) == 1;
     }
 
     /**
@@ -469,11 +605,13 @@ public class Time implements Comparable<Time> {
      *
      */
     public void addDays(int days) {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/uuuu");
-        String oldDate = extractDate(this.value);
-        String time = extractTime(this.value);
-        LocalDate date = LocalDate.parse(oldDate, formatter);
-        this.value = date.plusDays(days).format(formatter) + " " + time;
+        if (this.value != DEFAULT_TIME) {
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/uuuu");
+            String oldDate = extractDate(this.value);
+            String time = extractTime(this.value);
+            LocalDate date = LocalDate.parse(oldDate, formatter);
+            this.value = date.plusDays(days).format(formatter) + " " + time;
+        }
     }
 
     @Override
@@ -503,24 +641,16 @@ public class Time implements Comparable<Time> {
     }
 
 }
-
-```
-###### \java\seedu\jobs\model\task\Time.java
-``` java
-
 ```
 ###### \java\seedu\jobs\model\task\UniqueTaskList.java
 ``` java
     public boolean complete(int index, ReadOnlyTask toComplete) {
         assert toComplete != null;
 
-        ObservableList<Task> stackList = FXCollections.observableArrayList();
-        for (Task t : internalList) {
-            stackList.add(t);
-        }
-        undoStack.push(stackList);
+        pushUndoStack();
         Task taskToComplete = internalList.get(index);
         taskToComplete.markComplete();
+        taskToComplete.resetData(taskToComplete);
         internalList.set(index, taskToComplete);
         return true;
     }
@@ -575,4 +705,48 @@ public class SampleDataUtil {
         }
     }
 }
+```
+###### \java\seedu\jobs\ui\MainWindow.java
+``` java
+    public void activateBrowser() {
+        this.browserPanel = new BrowserPanel(browserPlaceholder, loginInfo);
+    }
+```
+###### \java\seedu\jobs\ui\UiManager.java
+``` java
+    @Subscribe
+    public void handleConfigChangedSavePathEvent(ConfigChangeSavePathEvent event) throws IOException {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        config.setTaskBookFilePath(event.getPath());
+        ConfigUtil.saveConfig(config, config.DEFAULT_CONFIG_FILE);
+    }
+
+    @Subscribe
+    public void handleBrowserDisplayEvent(BrowserDisplayEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        mainWindow.activateBrowser();
+    }
+
+    @Subscribe
+    public void handleLoginInfoChangeEvent(LoginInfoChangeEvent event) {
+        logger.info(LogsCenter.getEventHandlingLogMessage(event));
+        indicateDeleteCredentialEvent();
+        setLoginInfo(event);
+        indicateSaveLoginInfoEvent();
+    }
+
+    private void indicateDeleteCredentialEvent() {
+        raise(new DeleteCredentialEvent(loginInfo.getCredentialFilePath()));
+    }
+
+    private void setLoginInfo(LoginInfoChangeEvent event) {
+        this.loginInfo.setEmail(event.getEmail());
+        this.loginInfo.setPassword(event.getPassword());
+        this.loginInfo.setCredentialFilePath(event.getCredentialFilePath());
+    }
+
+    private void indicateSaveLoginInfoEvent() {
+        raise(new SaveLoginInfoEvent());
+    }
+
 ```
