--- a/collated/main/A0164039E.md
+++ b/collated/main/A0164039E.md
@@ -1,4 +1,312 @@
 # A0164039E
+###### \java\seedu\jobs\logic\calendar\AddCalendar.java
+``` java
+public class AddCalendar extends BasicCommandCalendar {
+    private EventCalendar toAdd;
+
+    public AddCalendar (Task inputTask,
+            com.google.api.services.calendar.Calendar inputCalendar) {
+        toAdd = new EventCalendar(inputTask);
+        service = inputCalendar;
+        try {
+            if (!isExist(toAdd)) {
+                this.execute();
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public void execute() throws IOException {
+        Event event = new Event()
+                .setSummary(toAdd.getSummary().toString())
+                .setDescription(toAdd.getDescription().toString());
+
+        DateTime startDateTime = new DateTime(toAdd.getStartTime().toString());
+        EventDateTime start = new EventDateTime()
+                .setDateTime(startDateTime)
+                .setTimeZone("Singapore");
+        event.setStart(start);
+
+        DateTime endDateTime = new DateTime(toAdd.getEndTime().toString());
+        EventDateTime end = new EventDateTime()
+                .setDateTime(endDateTime)
+                .setTimeZone("Singapore");
+        event.setEnd(end);
+
+        if (!(toAdd.getPeriod().equals("0"))) {
+            String[] recurrence = new String[] {"RRULE:FREQ=WEEKLY;COUNT=" + toAdd.getPeriod()};
+            event.setRecurrence(Arrays.asList(recurrence));
+        }
+
+        String calendarId = "primary";
+        event = service.events().insert(calendarId, event).execute();
+    }
+
+    public boolean isExist (EventCalendar toAdd) throws IOException {
+        if (retrieveID(toAdd).equals("")) {
+            return false;
+        }
+        return true;
+    }
+}
+
+```
+###### \java\seedu\jobs\logic\calendar\BasicCommandCalendar.java
+``` java
+public abstract class BasicCommandCalendar {
+
+
+    protected static com.google.api.services.calendar.Calendar service;
+
+    public abstract void execute() throws IOException, IllegalTimeException;
+
+    public String retrieveID(EventCalendar target) throws IOException {
+        String id = "";
+        String pageToken = null;
+        do {
+            Events events = service.events().list("primary").setPageToken(pageToken).execute();
+            List<Event> items = events.getItems();
+            for (Event event : items) {
+                if (event.getSummary().equals(target.getSummary()) &&
+                        isEqualStartTime(event, target) &&
+                        isEqualEndTime(event, target)) {
+                    id = event.getId();
+                }
+            }
+            pageToken = events.getNextPageToken();
+        } while (pageToken != null);
+        return id;
+    }
+
+    public boolean isEqualStartTime (Event event, EventCalendar target) {
+        return event.getStart().getDateTime().toString().substring(0, 19).equals
+                (target.getStartTime().toString().toString().substring(0, 19));
+    }
+
+    public boolean isEqualEndTime (Event event, EventCalendar target) {
+        return event.getEnd().getDateTime().toString().substring(0, 19).equals
+                (target.getEndTime().toString().toString().substring(0, 19));
+    }
+}
+```
+###### \java\seedu\jobs\logic\calendar\CalendarManager.java
+``` java
+    public static com.google.api.services.calendar.Calendar getCalendar() {
+        return service;
+    }
+
+    @Subscribe
+    public void addTask(AddCommandEvent event) {
+        new AddCalendar(event.getTask(), service);
+    }
+
+    @Subscribe
+    public void clearTask(ClearCommandEvent event) {
+        clearCalendar();
+    }
+
+    private void clearCalendar() {
+        new ClearCalendar(service);
+    }
+
+    @Subscribe
+    public void deleteTask(DeleteCommandEvent event) throws IllegalTimeException {
+        new DeleteCalendar(event.getTask(), service);
+
+    }
+
+    @Subscribe
+    public void editTask(EditCommandEvent event) throws IllegalTimeException {
+
+        ReadOnlyTask initialTask = event.getTaskToEdit();
+        Task newTask = event.getEditedTask();
+
+        if (!(initialTask.getEndTime().toString().equals("") && initialTask.getStartTime().toString().equals(""))) {
+            new DeleteCalendar(initialTask, service);
+        }
+        if (!(newTask.getEndTime().toString().equals("") && newTask.getStartTime().toString().equals(""))) {
+            new AddCalendar(newTask, service);
+        }
+    }
+
+    public void loadTask(UnmodifiableObservableList<ReadOnlyTask> list) throws IllegalTimeException {
+        new LoadCalendar(service, list);
+    }
+
+    @Subscribe
+    public void redoTask(RedoCommandEvent event) throws IllegalTimeException {
+        clearCalendar();
+        loadTask(event.getFilteredTaskList());
+    }
+
+    @Subscribe
+    public void undoTask(UndoCommandEvent event) throws IllegalTimeException {
+        clearCalendar();
+        loadTask(event.getFilteredTaskList());
+    }
+
+}
+```
+###### \java\seedu\jobs\logic\calendar\ClearCalendar.java
+``` java
+public class ClearCalendar extends BasicCommandCalendar {
+
+    public ClearCalendar(com.google.api.services.calendar.Calendar inputCalendar) {
+        service = inputCalendar;
+        try {
+            execute();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public void execute() throws IOException {
+        service.calendars().clear("primary").execute();
+    }
+}
+```
+###### \java\seedu\jobs\logic\calendar\DeleteCalendar.java
+``` java
+public class DeleteCalendar extends BasicCommandCalendar {
+    public final EventCalendar targetEvent;
+
+    public DeleteCalendar(ReadOnlyTask target,
+            com.google.api.services.calendar.Calendar inputCalendar) throws IllegalTimeException {
+        Task targetTask = new Task(target);
+        service = inputCalendar;
+        this.targetEvent = new EventCalendar(targetTask);
+        try {
+            execute();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public void execute() throws IOException {
+        String id = retrieveID(targetEvent);
+        service.events().delete("primary", id).execute();
+        if (!(id.equals(""))) {
+            service.events().delete("primary", id).execute();
+        }
+    }
+}
+```
+###### \java\seedu\jobs\model\calendar\EventCalendar.java
+``` java
+public class EventCalendar {
+    private String summary;
+    private TimeCalendar startTime;
+    private TimeCalendar endTime;
+    private String description;
+    private String period;
+
+    public EventCalendar(Task task) {
+        setSummary(task.getName().toString());
+
+        if (task.getStartTime().toString().equals("")) {
+            setStartTime(new TimeCalendar(task.getEndTime()));
+        } else {
+            setStartTime(new TimeCalendar(task.getStartTime()));
+        }
+
+        if (task.getEndTime().toString().equals("")) {
+            setEndTime(new TimeCalendar(task.getStartTime()));
+        } else {
+            setEndTime(new TimeCalendar(task.getEndTime()));
+        }
+
+        setDescription(task.getDescription().toString());
+        setPeriod(task.getPeriod().toString());
+    }
+
+    public String getSummary() {
+        return summary;
+    }
+
+    public void setSummary(String summary) {
+        this.summary = summary;
+    }
+
+    public TimeCalendar getStartTime() {
+        return startTime;
+    }
+
+    public void setStartTime(TimeCalendar startTime) {
+        this.startTime = startTime;
+    }
+
+    public TimeCalendar getEndTime() {
+        return endTime;
+    }
+
+    public void setEndTime(TimeCalendar endTime) {
+        this.endTime = endTime;
+    }
+
+    public String getDescription() {
+        return description;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
+    }
+
+    public String getPeriod() {
+        return period;
+    }
+
+    public void setPeriod(String period) {
+        this.period = period;
+    }
+
+}
+```
+###### \java\seedu\jobs\model\calendar\TimeCalendar.java
+``` java
+public class TimeCalendar {
+    private Time toConvert;
+
+    public TimeCalendar (Time time) {
+        toConvert = time;
+    }
+
+    public String extractYear (Time time) {
+        String year = Time.extractDate(time.value).substring(6);
+        return year;
+    }
+
+    public String extractMonth (Time time) {
+        String month = Time.extractDate(time.value).substring(3, 5);
+        return month;
+    }
+
+    public String extractDate (Time time) {
+        String date = Time.extractDate(time.value).substring(0, 2);
+        return date;
+    }
+
+    public String extractHour (Time time) {
+        String hour = Time.extractTime(time.value).substring(0, 2);
+        return hour;
+    }
+
+    public String extractMin (Time time) {
+        String min = Time.extractTime(time.value).substring(3);
+        return min;
+    }
+
+    public String getCompleteTime(Time time) {
+        String startTime = this.extractYear(time) + "-" + this.extractMonth(time) + "-" + this.extractDate(time)
+               + "T" + this.extractHour(time) + ":" + this.extractMin(time) + ":00+08:00";
+        return startTime;
+    }
+
+    public String toString() {
+        return getCompleteTime(toConvert);
+    }
+}
+```
 ###### \resources\view\CommandBox.fxml
 ``` fxml
 <AnchorPane styleClass="anchor-pane" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
@@ -11,22 +319,64 @@
 ```
 ###### \resources\view\DarkTheme.css
 ``` css
-.menu-bar :hover{
-    -fx-background-color: transparent;
+
+.table-view:focused .table-row-cell:filled:focused:selected {
+    -fx-background-color: -fx-focus-color;
 }
-```
-###### \resources\view\DarkTheme.css
-``` css
+
+.split-pane:horizontal .split-pane-divider {
+    -fx-border-color: transparent  derive(#ffffff, -20%) transparent derive(#ffffff, -20%);
+    -fx-background-color: transparent,  derive(#ffffff, -30%);
+}
+
 .menu-bar :hover {
-    -fx-background-color: derive(white, -5%);
+	-fx-background-color: derive(white, -5%);
 }
 
 .menu-bar :selected {
-    -fx-background-color: derive(white, -5%);
+	-fx-background-color: derive(white, -5%);
 }
+
+.menu-bar :hover{
+    -fx-background-color: transparent;
+}
+
+.list-cell:filled {
+	-fx-border-color: derive(black, 20%);
+}
+
+.list-cell:selected {
+	-fx-background-color: derive(black, 35%);
+}
+
+#commandTextField {
+	-fx-control-inner-background: derive(black, 15%);
+	-fx-prompt-text-fill: derive(white, -10%);
+}
+
+#commandTextField, #resultDisplay {
+	-fx-control-inner-background: derive(black, 25%);
+	-fx-text-fill: derive(white, -25%);
+	-fx-border-color: derive(white, -25%);
+}
+
+#status {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#status .label {
+
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
+
 ```
 ###### \resources\view\MainWindow.fxml
 ``` fxml
+
 <VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane style="-fx-background-color: derive(#ffffff, -10%);">
@@ -68,19 +418,19 @@
                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
            </padding>
        </AnchorPane>
-      <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.4" stylesheets="@DarkTheme.css" VBox.vgrow="ALWAYS">
+      <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.551948051948052" stylesheets="@DarkTheme.css" VBox.vgrow="ALWAYS">
          <items>
-            <VBox fx:id="taskList" maxWidth="370.0" minWidth="370.0" prefWidth="370.0" style="-fx-background-color: derive(black, 20%);">
+            <VBox fx:id="taskList" maxWidth="420.0" minWidth="420.0" prefHeight="45.0" prefWidth="420.0" style="-fx-background-color: derive(black, 20%);">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
                <children>
-                  <HBox minWidth="370.0" prefHeight="25.0" prefWidth="369.0">
+                  <HBox prefHeight="25.0" prefWidth="400.0">
                      <children>
-                        <Label minWidth="26.0" prefWidth="26.0" style="-fx-text-fill: white;" text="No" />
-                        <Label maxWidth="149.0" minWidth="149.0" prefWidth="149.0" style="-fx-text-fill: white;" text="Task" />
-                        <Label maxWidth="90.0" minWidth="90.0" prefWidth="90.0" style="-fx-text-fill: white;" text="Start" />
-                        <Label maxWidth="90.0" minWidth="90.0" prefWidth="90.0" style="-fx-text-fill: white;" text="End" textAlignment="CENTER" />
+                        <Label minWidth="40.0" prefWidth="40.0" style="-fx-text-fill: white;" text="No" />
+                        <Label minWidth="155.0" prefHeight="16.0" prefWidth="188.0" style="-fx-text-fill: white;" text="Task" />
+                        <Label minWidth="90.0" prefHeight="16.0" prefWidth="102.0" style="-fx-text-fill: white;" text="Start" />
+                        <Label minWidth="75.0" prefHeight="16.0" prefWidth="75.0" style="-fx-text-fill: white;" text="End" textAlignment="CENTER" />
                      </children>
                   </HBox>
                   <AnchorPane fx:id="taskListPanelPlaceholder" VBox.vgrow="ALWAYS" />
@@ -103,20 +453,21 @@
 ```
 ###### \resources\view\TaskListCard.fxml
 ``` fxml
-<VBox id="cardPane" fx:id="cardPane" prefWidth="345.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox id="cardPane" fx:id="cardPane" prefWidth="420.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="25.0">
           <children>
-                  <HBox alignment="CENTER_LEFT" minWidth="172.0" prefWidth="172.0" spacing="5">
+                  <HBox alignment="CENTER_LEFT" minWidth="200.0" prefHeight="25.0" prefWidth="219.0" spacing="5">
                       <children>
                           <HBox alignment="CENTER_LEFT">
-                              <Label fx:id="id" alignment="CENTER" prefWidth="25.0" style="-fx-text-fill: white;" styleClass="cell_big_label" />
+                              <Label fx:id="id" prefWidth="35.0" style="-fx-text-fill: white;" styleClass="cell_big_label" />
                               <Label fx:id="name" style="-fx-text-fill: white;" styleClass="cell_big_label" text="\$first" />
                           </HBox>
                       </children>
                   </HBox>
-                  <Label fx:id="startTime" prefWidth="90.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$start time" />
-                  <Label fx:id="endTime" maxWidth="85.0" minWidth="85.0" prefWidth="85.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$end time" />
+                  <Label fx:id="startTime" minWidth="100.0" prefWidth="100.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$start time" />
+                  <Label fx:id="endTime" minWidth="100.0" prefWidth="100.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$end time" />
           </children>
          <VBox.margin>
             <Insets />
@@ -124,9 +475,15 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="20.0" prefWidth="200.0">
          <children>
-            <Label prefWidth="27.0" />
-                  <Label fx:id="description" maxWidth="290.0" prefHeight="20.0" prefWidth="200.0" style="-fx-text-fill: derive(#ffffff, -25%);" styleClass="cell_small_label" text="\$description" />
-                  <FlowPane fx:id="tags" alignment="CENTER_LEFT" prefHeight="20.0" prefWidth="100.0" />
+            <Label prefWidth="38.0" />
+                  <Label fx:id="description" maxWidth="370.0" prefHeight="20.0" prefWidth="370.0" style="-fx-text-fill: derive(#ffffff, -25%);" styleClass="cell_small_label" text="\$description" />
+         </children>
+      </HBox>
+      <HBox prefHeight="20.0" prefWidth="200.0">
+         <children>
+            <Label minWidth="38.0" prefWidth="38.0" />
+            <FlowPane fx:id="tags" alignment="CENTER_LEFT" prefHeight="20.0" prefWidth="285.0" />
+            <Pane fx:id="status" prefHeight="20.0" prefWidth="100.0" />
          </children>
       </HBox>
       <AnchorPane prefHeight="1.0" prefWidth="200.0" style="-fx-background-color: white;" />
