--- a/collated/main/A0164440M.md
+++ b/collated/main/A0164440M.md
@@ -1,4 +1,44 @@
 # A0164440M
+###### \java\seedu\jobs\logic\commands\ListCommand.java
+``` java
+/**
+ * list all tasks with or without arguments
+ */
+
+public class ListCommand extends Command {
+
+    public static final String COMMAND_WORD = "list";
+    public static final String MESSAGE_SUCCESS = "Listed all tasks";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": list all tasks whose names contain any of "
+            + "the specified keywords (case-sensitive) and displays them as a list with index numbers.\n"
+            + "Parameters: KEYWORD [MORE_KEYWORDS]...\n"
+            + "Example: " + COMMAND_WORD + " alice bob charlie";
+
+    private final Set<String> keywords;
+
+    public ListCommand() {
+        this.keywords = null;
+    }
+
+    public ListCommand(Set<String> keywords) {
+        this.keywords = keywords;
+    }
+
+```
+###### \java\seedu\jobs\logic\commands\ListCommand.java
+``` java
+    @Override
+    public CommandResult execute() {
+        if (keywords == null) {
+            model.updateFilteredListToShowAll();
+            return new CommandResult(MESSAGE_SUCCESS);
+        } else {
+            model.updateFilteredListToShowAll(keywords);
+        }
+        return new CommandResult(getMessageForTaskListShownSummary(model.getFilteredTaskList().size()));
+    }
+```
 ###### \java\seedu\jobs\logic\commands\RedoCommand.java
 ``` java
 public class RedoCommand extends Command {
@@ -6,7 +46,7 @@ public class RedoCommand extends Command {
     public static final String COMMAND_WORD = "redo";
 
     public static final String MESSAGE_SUCCESS = "Redo previous command";
-    public static final String MESSAGE_FAILUIRE = "No more commands to redo";
+    public static final String MESSAGE_FAILURE = "No more commands to redo";
 
 
     @Override
@@ -15,7 +55,7 @@ public class RedoCommand extends Command {
             model.redoCommand();
             return new CommandResult(MESSAGE_SUCCESS);
         } catch (EmptyStackException e) {
-            throw new CommandException(MESSAGE_FAILUIRE);
+            throw new CommandException(MESSAGE_FAILURE);
         }
     }
 }
@@ -30,7 +70,7 @@ public class UndoCommand extends Command {
     public static final String COMMAND_WORD = "undo";
 
     public static final String MESSAGE_SUCCESS = "Undo last command";
-    public static final String MESSAGE_FAILUIRE = "No more commands to undo";
+    public static final String MESSAGE_FAILURE = "No more commands to undo";
 
 
     @Override
@@ -39,9 +79,56 @@ public class UndoCommand extends Command {
             model.undoCommand();
             return new CommandResult(MESSAGE_SUCCESS);
         } catch (EmptyStackException e) {
-            throw new CommandException(MESSAGE_FAILUIRE);
+            throw new CommandException(MESSAGE_FAILURE);
         }
     }
+}
+```
+###### \java\seedu\jobs\logic\parser\ListCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new ListCommand object
+ */
+public class ListCommandParser {
+
+    /**
+     * Parses the given {@code String} of arguments in the context of the FindCommand
+     * and returns an FindCommand object for execution.
+     */
+    public Command parse(String args) {
+        final Matcher matcher = KEYWORDS_ARGS_FORMAT.matcher(args.trim());
+        if (!matcher.matches()) {
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
+        }
+
+        // keywords delimited by whitespace
+        final String[] keywords = matcher.group("keywords").split("\\s+");
+        final Set<String> keywordSet = new HashSet<>(Arrays.asList(keywords));
+        return new ListCommand(keywordSet);
+    }
+
+}
+```
+###### \java\seedu\jobs\logic\parser\Parser.java
+``` java
+        // Let 'list' accept both no argument and with arguments
+        case ListCommand.COMMAND_WORD:
+            if (arguments.trim().length() > 0) {
+                return new ListCommandParser().parse(arguments);
+            } else {
+                return new ListCommand();
+            }
+```
+###### \java\seedu\jobs\logic\parser\Parser.java
+``` java
+
+
+        default:
+            return new IncorrectCommand(MESSAGE_UNKNOWN_COMMAND);
+        }
+    }
+
 }
 ```
 ###### \java\seedu\jobs\model\FixedStack.java
@@ -71,80 +158,148 @@ public class FixedStack<T> extends Stack<T> {
 
 }
 ```
+###### \java\seedu\jobs\model\Model.java
+``` java
+    /** Updates the filter of the filtered tasks list to show all tasks based on arguments */
+    void updateFilteredListToShowAll(Set<String> keywords);
+```
+###### \java\seedu\jobs\model\ModelManager.java
+``` java
+    @Override
+    public void updateFilteredListToShowAll(Set<String> keywords) {
+        updateFilteredTaskList(new PredicateExpression(new NameQualifier(keywords, ListCommand.COMMAND_WORD)));
+    }
+
+    @Override
+    public void updateFilteredTaskList(Set<String> keywords) {
+        updateFilteredTaskList(new PredicateExpression(new NameQualifier(keywords, FindCommand.COMMAND_WORD)));
+    }
+```
 ###### \java\seedu\jobs\model\ModelManager.java
 ``` java
     @Override
     public synchronized void undoCommand() throws EmptyStackException {
         taskBook.undoTask();
+        indicateUndo();
         indicateTaskBookChanged();
     }
 
     @Override
     public synchronized void redoCommand() throws EmptyStackException {
         taskBook.redoTask();
+        indicateRedo();
         indicateTaskBookChanged();
+    }
+
+  //=========== path command =======================================================================
+```
+###### \java\seedu\jobs\model\ModelManager.java
+``` java
+        //Reuse the function to implement filtered list
+        private String commandWord;
+        private String taskInfo = "";
+
+        NameQualifier(Set<String> nameKeyWords, String commandWord) {
+            this.nameKeyWords = nameKeyWords;
+            this.commandWord = commandWord;
+        }
+
+        @Override
+        public boolean run(ReadOnlyTask task) {
+            if (commandWord.equals(FindCommand.COMMAND_WORD)) {
+                //Enable find command to find according description and tags
+                taskInfo = task.getName().fullName + task.getDescription().toString()
+                        + task.getTags().toString();
+            }
+            if (commandWord.equals(ListCommand.COMMAND_WORD)) {
+                //Enable to list completed tasks or in-progress tasks
+                if (nameKeyWords.size() == 1 && (nameKeyWords.contains("complete") ||
+                        nameKeyWords.contains("in-progress"))) {
+                    taskInfo = task.isCompleted() ? "complete" : "in-progress";
+                }
+```
+###### \java\seedu\jobs\model\tag\UniqueTagList.java
+``` java
+    @Override
+    public String toString() {
+        String ans = "";
+        for (Tag t : internalList) {
+            ans += t.toString();
+        }
+        return ans.toString();
     }
 ```
 ###### \java\seedu\jobs\model\task\UniqueTaskList.java
 ``` java
     private final FixedStack<ObservableList<Task>> undoStack = new FixedStack();
     private final FixedStack<ObservableList<Task>> redoStack = new FixedStack();
+    private boolean isInitialized = true;
 ```
 ###### \java\seedu\jobs\model\task\UniqueTaskList.java
 ``` java
-        ObservableList<Task> stackList = FXCollections.observableArrayList();
-        for (Task t : internalList) {
-            stackList.add(t);
-        }
-        undoStack.push(stackList);
+        pushUndoStack();
 ```
 ###### \java\seedu\jobs\model\task\UniqueTaskList.java
 ``` java
         ObservableList<Task> stackList = FXCollections.observableArrayList();
         Task temp;
-        for (Task t : internalList) {
-            temp = new Task(t);
-            stackList.add(temp);
-        }
+        pushUndoStack();
         undoStack.push(stackList);
 ```
 ###### \java\seedu\jobs\model\task\UniqueTaskList.java
 ``` java
-        ObservableList<Task> stackList = FXCollections.observableArrayList();
-        for (Task t : internalList) {
-            stackList.add(t);
-        }
-        undoStack.push(stackList);
+        pushUndoStack();
 ```
 ###### \java\seedu\jobs\model\task\UniqueTaskList.java
 ``` java
     public void undo() throws EmptyStackException {
         ObservableList<Task> replacement = undoStack.pop();
-        ObservableList<Task> redoTemp = FXCollections.observableArrayList();
-        for (Task t : internalList) {
-            redoTemp.add(t);
-        }
-        redoStack.push(redoTemp);
+        pushRedoStack();
         this.internalList.setAll(replacement);
     }
 
     public void redo() throws EmptyStackException {
         ObservableList<Task> replacement = redoStack.pop();
-        ObservableList<Task> undoTemp = FXCollections.observableArrayList();
-        for (Task t : internalList) {
-            undoTemp.add(t);
-        }
-        undoStack.push(undoTemp);
+        pushUndoStack();
         this.internalList.setAll(replacement);
     }
+
+    private void pushUndoStack() {
+        ObservableList<Task> stackList = FXCollections.observableArrayList();
+        for (Task t : internalList) {
+            try {
+                Task temp = new Task(t);
+                stackList.add(temp);
+            } catch (IllegalTimeException e) {
+                e.printStackTrace();
+            }
+        }
+        undoStack.push(stackList);
+    }
+
+    private void pushRedoStack() {
+        ObservableList<Task> redoTemp = FXCollections.observableArrayList();
+        for (Task t : internalList) {
+            try {
+                Task temp = new Task(t);
+                redoTemp.add(temp);
+            } catch (IllegalTimeException e) {
+                e.printStackTrace();
+            }
+        }
+        redoStack.push(redoTemp);
+    }
+
 ```
 ###### \java\seedu\jobs\model\task\UniqueTaskList.java
 ``` java
-        ObservableList<Task> stackList = FXCollections.observableArrayList();
-        for (Task t : internalList) {
-            stackList.add(t);
+        //To prevent empty list been pushed into undoStack during initialization
+        if (!isInitialized) {
+            pushUndoStack();
+        } else {
+            isInitialized = !isInitialized;
         }
-        undoStack.push(stackList);
+
 ```
 ###### \java\seedu\jobs\model\TaskBook.java
 ``` java
